apps/external-apps/tika/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tika
  namespace: external-apps
spec:
  type: ExternalName
  ports:
    - name: http
      port: 9998
      targetPort: 9998
  externalName: 10.69.1.52
