apps/external-apps/tika/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tika
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-local
spec:
  entryPoints:
    - websecure
  tls:
    secretName: local-cvsickle-com-tls
  routes:
    - match: Host(`tika.local.cvsickle.com`)
      kind: Rule
      services:
        - name: tika
          namespace: external-apps
          port: 9998
